Fix: Sonar issues. (#1889)