@@ -1,7 +1,6 @@
 package no.nav.foreldrepenger.los.organisasjon.ansatt;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -15,15 +14,14 @@ public class AnsattTjeneste {
 
     private EnhetstilgangTjeneste enhetstilgangTjeneste;
     private OrganisasjonRepository organisasjonRepository;
-    private static List<String> aktuelleEnhetIder;
+    private List<String> aktuelleEnhetIder;
 
     AnsattTjeneste() {
         // for CDI proxy
     }
 
     @Inject
-    public AnsattTjeneste(EnhetstilgangTjeneste enhetstilgangTjeneste,
-                          OrganisasjonRepository organisasjonRepository) {
+    public AnsattTjeneste(EnhetstilgangTjeneste enhetstilgangTjeneste, OrganisasjonRepository organisasjonRepository) {
         this.enhetstilgangTjeneste = enhetstilgangTjeneste;
         this.organisasjonRepository = organisasjonRepository;
     }
@@ -34,15 +32,13 @@ public class AnsattTjeneste {
 
     public List<String> hentAvdelingerNavnForAnsatt(String ident) {
         if (aktuelleEnhetIder == null) {
-            aktuelleEnhetIder = organisasjonRepository.hentAvdelinger().stream()
-                    .map(Avdeling::getAvdelingEnhet)
-                    .collect(Collectors.toList());
+            aktuelleEnhetIder = organisasjonRepository.hentAvdelinger().stream().map(Avdeling::getAvdelingEnhet).toList();
         }
         return enhetstilgangTjeneste.hentEnhetstilganger(ident)
-                .stream()
-                .filter(oe -> aktuelleEnhetIder.contains(oe.id()))
-                .map(OrganisasjonsEnhet::navn)
-                .collect(Collectors.toList());
+            .stream()
+            .filter(oe -> aktuelleEnhetIder.contains(oe.id()))
+            .map(OrganisasjonsEnhet::navn)
+            .toList();
     }
 
 }
