@@ -37,22 +37,18 @@ public class ConstraintViolationMapper implements ExceptionMapper<ConstraintViol
             var feltNavn = getFeltNavn(constraintViolation.getPropertyPath());
             feilene.add(new FeltFeilDto(feltNavn, constraintViolation.getMessage()));
         }
-        var feltNavn = feilene.stream().map(FeltFeilDto::navn).collect(Collectors.toList());
-        var feilmelding = String.format(
-                "Det oppstod en valideringsfeil på felt %s. " + "Vennligst kontroller at alle feltverdier er korrekte.",
-                feltNavn);
-        return Response.status(Response.Status.BAD_REQUEST)
-                .entity(new FeilDto(feilmelding, feilene))
-                .type(MediaType.APPLICATION_JSON)
-                .build();
+        var feltNavn = feilene.stream().map(FeltFeilDto::navn).toList();
+        var feilmelding = String.format("Det oppstod en valideringsfeil på felt %s. " + "Vennligst kontroller at alle feltverdier er korrekte.",
+            feltNavn);
+        return Response.status(Response.Status.BAD_REQUEST).entity(new FeilDto(feilmelding, feilene)).type(MediaType.APPLICATION_JSON).build();
     }
 
     private static Set<String> constraints(ConstraintViolationException exception) {
         return exception.getConstraintViolations()
-                .stream()
-                .map(cv -> cv.getRootBeanClass().getSimpleName() + "." + cv.getLeafBean().getClass().getSimpleName()
-                        + "." + fieldName(cv) + " - " + cv.getMessage())
-                .collect(Collectors.toSet());
+            .stream()
+            .map(cv -> cv.getRootBeanClass().getSimpleName() + "." + cv.getLeafBean().getClass().getSimpleName() + "." + fieldName(cv) + " - "
+                + cv.getMessage())
+            .collect(Collectors.toSet());
     }
 
     private static String fieldName(ConstraintViolation<?> cv) {
