@@ -1,7 +1,5 @@
 package no.nav.foreldrepenger.los.web.app.tjenester.admin;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 
 import javax.enterprise.context.ApplicationScoped;
@@ -52,9 +50,9 @@ public class AdminRestTjeneste {
     @BeskyttetRessurs(actionType = ActionType.CREATE, resourceType = ResourceType.DRIFT)
     public Response synkroniserHendelser(@NotNull @Valid List<EnkelBehandlingIdDto> behandlingIdListe) {
         var behandlinger = behandlingIdListe.stream()
-                .map(EnkelBehandlingIdDto::getBehandlingId)
-                .map(b -> new SynkroniseringHendelseTaskOppretterTjeneste.KildeBehandlingId(Kildesystem.FPSAK, b))
-                .collect(toList());
+            .map(EnkelBehandlingIdDto::getBehandlingId)
+            .map(b -> new SynkroniseringHendelseTaskOppretterTjeneste.KildeBehandlingId(Kildesystem.FPSAK, b))
+            .toList();
         var opprettedeTasker = synkroniseringHendelseTaskOppretterTjeneste.opprettOppgaveEgenskapOppdatererTasks(behandlinger);
         return Response.ok(opprettedeTasker).build();
     }
@@ -67,9 +65,9 @@ public class AdminRestTjeneste {
     @BeskyttetRessurs(actionType = ActionType.CREATE, resourceType = ResourceType.DRIFT)
     public Response synkroniserHendelserTilbake(@NotNull @Valid List<EnkelBehandlingIdDto> behandlingIdListe) {
         var behandlinger = behandlingIdListe.stream()
-                .map(EnkelBehandlingIdDto::getBehandlingId)
-                .map(b -> new SynkroniseringHendelseTaskOppretterTjeneste.KildeBehandlingId(Kildesystem.FPTILBAKE, b))
-                .collect(toList());
+            .map(EnkelBehandlingIdDto::getBehandlingId)
+            .map(b -> new SynkroniseringHendelseTaskOppretterTjeneste.KildeBehandlingId(Kildesystem.FPTILBAKE, b))
+            .toList();
         var opprettedeTasker = synkroniseringHendelseTaskOppretterTjeneste.opprettOppgaveEgenskapOppdatererTasks(behandlinger);
         return Response.ok(opprettedeTasker).build();
     }
