@@ -1,7 +1,6 @@
 package no.nav.foreldrepenger.los.web.app.tjenester.admin;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -43,24 +42,18 @@ public class DriftsmeldingerRestTjeneste {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(description = "Driftsmeldinger", tags = "admin")
-    @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     @BeskyttetRessurs(actionType = ActionType.READ, resourceType = ResourceType.APPLIKASJON, sporingslogg = false)
     public List<DriftsmeldingDto> hentAktiveDriftsmeldinger() {
-        return driftsmeldingTjeneste.hentAktiveDriftsmeldinger().stream()
-                .map(DriftsmeldingerRestTjeneste::tilDto)
-                .collect(Collectors.toList());
+        return driftsmeldingTjeneste.hentAktiveDriftsmeldinger().stream().map(DriftsmeldingerRestTjeneste::tilDto).toList();
     }
 
     @GET
     @Path("/alle-driftsmeldinger")
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(description = "Driftsmeldinger", tags = "admin")
-    @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     @BeskyttetRessurs(actionType = ActionType.READ, resourceType = ResourceType.APPLIKASJON, sporingslogg = false)
     public List<DriftsmeldingDto> hentAlleDriftsmeldinger() {
-        return driftsmeldingTjeneste.hentAlleDriftsmeldinger().stream()
-                .map(DriftsmeldingerRestTjeneste::tilDto)
-                .collect(Collectors.toList());
+        return driftsmeldingTjeneste.hentAlleDriftsmeldinger().stream().map(DriftsmeldingerRestTjeneste::tilDto).toList();
     }
 
     @POST
@@ -68,7 +61,6 @@ public class DriftsmeldingerRestTjeneste {
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(description = "Driftsmeldinger", tags = "admin")
-    @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     @BeskyttetRessurs(actionType = ActionType.CREATE, resourceType = ResourceType.DRIFT, sporingslogg = false)
     public Response opprettDriftsmelding(@Parameter(description = "jepp") @NotNull @Valid DriftsmeldingOpprettelseDto dto) {
         var melding = tilDriftsmelding(dto);
@@ -80,7 +72,6 @@ public class DriftsmeldingerRestTjeneste {
     @Path("/deaktiver")
     @Consumes(MediaType.APPLICATION_JSON)
     @Operation(description = "Driftsmeldinger", tags = "admin")
-    @SuppressWarnings("findsecbugs:JAXRS_ENDPOINT")
     @BeskyttetRessurs(actionType = ActionType.CREATE, resourceType = ResourceType.DRIFT, sporingslogg = false)
     public Response deaktiverDriftsmeldinger() {
         driftsmeldingTjeneste.deaktiverDriftsmeldinger();
@@ -88,16 +79,12 @@ public class DriftsmeldingerRestTjeneste {
     }
 
     private static DriftsmeldingDto tilDto(Driftsmelding driftsmelding) {
-        return new DriftsmeldingDto(String.valueOf(driftsmelding.getId()),
-                driftsmelding.getMelding(), driftsmelding.getAktivFra(), driftsmelding.getAktivTil());
+        return new DriftsmeldingDto(String.valueOf(driftsmelding.getId()), driftsmelding.getMelding(), driftsmelding.getAktivFra(),
+            driftsmelding.getAktivTil());
     }
 
     private Driftsmelding tilDriftsmelding(DriftsmeldingOpprettelseDto dto) {
-        return Driftsmelding.Builder.builder()
-                .medMelding(dto.getMelding())
-                .medAktivFra(dto.getAktivFra())
-                .medAktivTil(dto.getAktivTil())
-                .build();
+        return Driftsmelding.Builder.builder().medMelding(dto.getMelding()).medAktivFra(dto.getAktivFra()).medAktivTil(dto.getAktivTil()).build();
     }
 }
 
