@@ -1,18 +1,17 @@
 package no.nav.foreldrepenger.los.web.app.tjenester.saksbehandler.oppgave.dto;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Pattern;
-
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import no.nav.vedtak.sikkerhet.abac.AbacDataAttributter;
 import no.nav.vedtak.sikkerhet.abac.AbacDto;
+
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Pattern;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Stream;
 
 public class SaknummerIderDto implements AbacDto {
 
@@ -36,17 +35,15 @@ public class SaknummerIderDto implements AbacDto {
 
     @Override
     public String toString() {
-        return "SaknummerIderDto{" +
-                "saksnummerListe='" + saksnummerListe + '\'' +
-                '}';
+        return "SaknummerIderDto{" + "saksnummerListe='" + saksnummerListe + '\'' + '}';
     }
 
-    public List<Long> getSaksnummerListe(){
-        if (null == saksnummerListe){
+    public List<Long> getSaksnummerListe() {
+        if (null == saksnummerListe) {
             return new ArrayList<>();
         }
 
-        return Stream.of(saksnummerListe.split(",")).map(s -> Long.valueOf(s.trim())).collect(Collectors.toList());
+        return Stream.of(saksnummerListe.split(",")).map(s -> Long.valueOf(s.trim())).toList();
     }
 
     @Override
